- enabled launching game from campaign Alpha,Beta,Gamma - enabled fullscreen/resolution changer(direct writting to config file)

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -4,7 +4,7 @@ annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
 application.homepage=http://warzone2100.org.ua/
-application.title=Wz2100 launcher
+application.title=Wz2100 launcher 0.15
 application.vendor=kaynix
 auxiliary.org-netbeans-spi-editor-hints-projects.perProjectHintSettingsFile=nbproject/cfg_hints.xml
 build.classes.dir=${build.dir}/classes
