--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -3,8 +3,8 @@ annotation.processing.enabled.in.editor=false
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
-application.homepage=http://warzone2100.org.ua/
-application.title=Wz2100 launcher 0.15c
+application.homepage=http://wz2100.net/
+application.title=Wz2100 launcher 0.15e
 application.vendor=kaynix
 auxiliary.org-netbeans-spi-editor-hints-projects.perProjectHintSettingsFile=nbproject/cfg_hints.xml
 build.classes.dir=${build.dir}/classes
